--- a/package/Config.in
+++ b/package/Config.in
@@ -147,8 +147,11 @@ endif
 
 source "package/x11r7/Config.in"
 
-comment "X libraries and helper libraries"
+comment "Fonts"
 source "package/liberation/Config.in"
+source "package/dejavu-fonts/Config.in"
+
+comment "X libraries and helper libraries"
 source "package/libsexy/Config.in"
 
 comment "X Window managers"
