pwswd: Fix dependancy on libini and fix compilation for a320

--- a/package/pwswd/Config.in
+++ b/package/pwswd/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_PWSWD
 	bool "pwswd"
+	select BR2_PACKAGE_LIBINI
 	help
 	  Power Switch Daemon for Dingoo A320/A330 and GCW Zero.
 	  It allows the user to change various system settings such as brightness,
@@ -9,7 +10,7 @@ config BR2_PACKAGE_PWSWD
 
 if BR2_PACKAGE_PWSWD
 
-config BR2_PACKAGE_PWSWD_MIXER
-	string "Volume mixer"
+config BR2_PACKAGE_PWSWD_PLATFORM
+	string "Target platform"
 
 endif
