--- a/configs/a320_defconfig
+++ b/configs/a320_defconfig
@@ -2,13 +2,9 @@ BR2_mipsel=y
 BR2_mips_jz4740=y
 BR2_OPTIMIZE_2=y
 BR2_VENDOR="a320"
-BR2_KERNEL_HEADERS_VERSION=y
-BR2_DEFAULT_KERNEL_VERSION="3.6"
 BR2_UCLIBC_CONFIG="board/opendingux/a320/uclibc.config"
-BR2_BINUTILS_VERSION_2_22=y
-BR2_BINUTILS_EXTRA_CONFIG_OPTIONS="--enable-lto"
-BR2_GCC_VERSION_4_7_X=y
-BR2_EXTRA_GCC_CONFIG_OPTIONS="--enable-lto"
+BR2_BINUTILS_VERSION_2_23_1=y
+BR2_GCC_VERSION_4_8_X=y
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_HOST=y
@@ -23,8 +19,16 @@ BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/opendingux/a320/target_skeleton"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/opendingux/busybox-1.20.x.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
+BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
+BR2_PACKAGE_ALSA_UTILS_AMIDI=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_ALSA_UTILS_IECSET=y
+BR2_PACKAGE_ALSA_UTILS_ACONNECT=y
+BR2_PACKAGE_ALSA_UTILS_APLAYMIDI=y
+BR2_PACKAGE_ALSA_UTILS_ARECORDMIDI=y
+BR2_PACKAGE_ALSA_UTILS_ASEQDUMP=y
+BR2_PACKAGE_ALSA_UTILS_ASEQNET=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_ALSA_VOLUME=y
 BR2_PACKAGE_FLAC=y
@@ -32,24 +36,33 @@ BR2_PACKAGE_MADPLAY=y
 BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_DSTAT=y
 BR2_PACKAGE_DMALLOC=y
+BR2_PACKAGE_KEXEC=y
+BR2_PACKAGE_KEXEC_ZLIB=y
 BR2_PACKAGE_MEMSTAT=y
 BR2_PACKAGE_OPROFILE=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_STRESS=y
 BR2_PACKAGE_SSTRIP=y
+BR2_PACKAGE_ALLEGRO=y
 BR2_PACKAGE_FBGRAB=y
 BR2_PACKAGE_LIBMIKMOD=y
 BR2_PACKAGE_SDL_IMAGE_GIF=y
+BR2_PACKAGE_SDL_IMAGE_LBM=y
+BR2_PACKAGE_SDL_IMAGE_PCX=y
 BR2_PACKAGE_SDL_IMAGE_TARGA=y
+BR2_PACKAGE_SDL_IMAGE_TIFF=y
+BR2_PACKAGE_SDL_IMAGE_XCF=y
 BR2_PACKAGE_SDL_SOUND=y
 BR2_PACKAGE_SDL_NET=y
 BR2_PACKAGE_TIMIDITY_INSTRUMENTS=y
+BR2_PACKAGE_DEJAVU_FONTS_SANS=y
+BR2_PACKAGE_DEJAVU_FONTS_SERIF=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DINGOO_TVOUT=y
 BR2_PACKAGE_FMTOOLS=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_PWSWD=y
-BR2_PACKAGE_PWSWD_MIXER="SoftMaster"
+BR2_PACKAGE_PWSWD_PLATFORM="a320"
 BR2_PACKAGE_PYTHON_CURSES=y
 BR2_PACKAGE_PYTHON_PYEXPAT=y
 BR2_PACKAGE_PYTHON_READLINE=y
@@ -62,8 +75,6 @@ BR2_PACKAGE_PYTHON_PYGAME_FONT=y
 BR2_PACKAGE_PYTHON_PYGAME_MIXER=y
 BR2_PACKAGE_PYTHON_PYGAME_MIXER_MUSIC=y
 BR2_PACKAGE_ALSA_LIB_DEVDIR="/dev"
-# BR2_PACKAGE_ALSA_LIB_RAWMIDI is not set
-# BR2_PACKAGE_ALSA_LIB_SEQ is not set
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 # BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS is not set
 BR2_PACKAGE_LIBAO=y
@@ -97,5 +108,6 @@ BR2_PACKAGE_BWM_NG=y
 BR2_PACKAGE_DINGUX_COMMANDER=y
 BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_NANO=y
+BR2_PACKAGE_VIM=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
