defconfig: a380: Use pwswd gcw0 config; fix path to uclibc config

--- a/configs/a380_defconfig
+++ b/configs/a380_defconfig
@@ -2,7 +2,7 @@ BR2_mipsel=y
 BR2_mips_jz4740=y
 BR2_OPTIMIZE_2=y
 BR2_VENDOR="a320"
-BR2_UCLIBC_CONFIG="board/opendingux/a320/uclibc.config"
+BR2_UCLIBC_CONFIG="board/opendingux/a380/uclibc.config"
 BR2_BINUTILS_VERSION_2_23_1=y
 BR2_GCC_VERSION_4_8_X=y
 BR2_PACKAGE_GDB=y
@@ -62,7 +62,7 @@ BR2_PACKAGE_DINGOO_TVOUT=y
 BR2_PACKAGE_FMTOOLS=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_PWSWD=y
-BR2_PACKAGE_PWSWD_PLATFORM="a320"
+BR2_PACKAGE_PWSWD_PLATFORM="gcw0"
 BR2_PACKAGE_PYTHON_CURSES=y
 BR2_PACKAGE_PYTHON_PYEXPAT=y
 BR2_PACKAGE_PYTHON_READLINE=y
